@@ -6,6 +6,7 @@
 * Enabled per-project configurations and platforms
 * Enabled per-configuration file lists
 * Enabled per-configuration toolset selection
+* Added custom build rules
 * Added remove...() API to remove values from list fields
 * Added debugformat with C7 support for Visual Studio
 * The error message for invalid flags now includes the offending value
